anmeldung: grobes schema

--- a/anmeldung/kurzbeschreibung/main.tex
+++ b/anmeldung/kurzbeschreibung/main.tex
@@ -13,12 +13,21 @@
 \begin{document}
 \maketitle
 \section*{Das nEDM Experiment}
+\subsection*{Überblick}
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
-\section*{Die Vorlesung Particle Physics with Neutrons}
+\subsection*{Notwendigkeit der Umgebungsmessung}
+Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+\section*{Die Vorlesung ``Particle Physics with Neutrons''}
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
 \section*{Unser Projekt}
+\subsection*{Überblick}
+- Anforderungsanalyse
+- Recherche nach passender Hardware
+- Aufbau der Hardware
+- Implementieren einer Software lösung
+- Installation des Sensornetzwerks im Experimentaufbau
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-\section*{Meilensteine}
+\subsection*{Meilensteine}
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
 
 \end{document}
