--- a/anmeldung/kurzbeschreibung/main.tex
+++ b/anmeldung/kurzbeschreibung/main.tex
@@ -14,11 +14,22 @@
 \maketitle
 \section*{Das nEDM Experiment}
 \subsection*{Überblick}
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+Nach dem Standardmodell der Teilchenphysik wird derzeit angenommen, dass
+Neutronen durch elektroschwache Wechselwirkung ein elektrisches Dipolmoment
+in der Größenordnung von etwa $10^{-32}e\cdot cm$ haben. Eine Erweiterung des
+Standardmodells wird ein Dipolmoment des Neutrons bereits im Bereich zwischen
+$10^{-26}e\cdot cm$ und $10^{-28}e\cdot cm$ vorhergesagt. Derzeit liegt das
+Limit für Messungen des Dipolmoments bei ca. $10^{-26}e\cdot cm$\\
+Das Neutron EDM Experiment an der TUM versucht deshalb die Messgenauigkeit so
+weit zu steigern, damit die oben genannte Theorie entweder belegt oder
+widerlegt werden kann.\\
+Um dies zu erreichen, werden spinpolarisierte ultrakalte Neutronen (UCN) in
+zwei Kammern in einer hochgradig kontrollierten und magnetisch abgeschirmten
+Umgebung gefüllt. Dort wird dann eine Spinpräzessionsmessung nach Ramsey
+durchgeführt, mit welcher Informationen über das elektrische Dipolmoment des
+Neutrons gewonnen werden.
 \subsection*{Notwendigkeit der Umgebungsmessung}
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
 \section*{Die Vorlesung ``Particle Physics with Neutrons''}
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
 \section*{Unser Projekt}
 \subsection*{Überblick}
 - Anforderungsanalyse
@@ -26,8 +37,6 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 - Aufbau der Hardware
 - Implementieren einer Software lösung
 - Installation des Sensornetzwerks im Experimentaufbau
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 \subsection*{Meilensteine}
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
 
 \end{document}
