--- a/anmeldung/kurzbeschreibung/main.tex
+++ b/anmeldung/kurzbeschreibung/main.tex
@@ -41,6 +41,6 @@ Neutrons gewonnen werden.
 \subsection*{Meilensteine}
 Der vorgesehene Zeitplan und Aufgabenaufteilung sind folgendes:
 \begin{center}
-\includegraphics[]{../plan.pdf}
+\includegraphics[]{plan.pdf}
 \end{center}
 \end{document}
