--- a/anmeldung/kurzbeschreibung/main.tex
+++ b/anmeldung/kurzbeschreibung/main.tex
@@ -26,11 +26,32 @@ weit zu steigern, damit die oben genannte Theorie entweder belegt oder
 widerlegt werden kann.\\
 Um dies zu erreichen, werden spinpolarisierte ultrakalte Neutronen (UCN) in
 zwei Kammern in einer hochgradig kontrollierten und magnetisch abgeschirmten
-Umgebung gefüllt. Dort wird dann eine Spinpräzessionsmessung nach Ramsey
+Umgebung (siehe Abbildung \ref{fig:exp}) gefüllt. Dort wird dann eine
+Spin\-präzessions\-messung nach Ramsey
 durchgeführt, mit welcher Informationen über das elektrische Dipolmoment des
 Neutrons gewonnen werden.
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.7\linewidth]{img/frm3d.png}
+\caption{Experiment Umgebung. 1: Spulenkäfig zur magnetischen Feldkompensation,
+2: Äußere magnetisches Schild, 3: Inneres magnetisches Schild, 4: Klimaanlage}
+\label{fig:exp}
+\end{figure}
 \subsection*{Notwendigkeit der Umgebungsmessung}
+Um sicher zu stellen, dass bei dem Experiment konstante Bedingungen herrschen
+ist neben der exakt definierten magnetischen Umgebung auch die 
+Umgebungstemperatur, sowie der Luftfeuchtigkeit innerhalb des äußeren
+Spulenkäfigs von großer Wichtigkeit. Diese wird von einer Klimaanlage
+kontrolliert. Zur Steuerung dieser Anlage muss jedoch die Temperatur an
+verschiedenen Positionen im Spulenkäfig gemessen werden.
 \section*{Die Vorlesung ``Particle Physics with Neutrons''}
+Die Vorlesung behandelt Grundlagen der Neutronenphysik. Sie gibt insbesondere
+einen Überblick über die Physik der ultrakalten Neutronen, sowie über einige
+experimentelle Methoden im Kontext von Neutronen.\\
+Die Vorlesung erlaubt es uns somit, die Hintergründe des nEDM Experiments zu
+verstehen, was für die Entwicklung eines Sensornetzwerkes von höchster
+Wichtigkeit ist, um die Anforderungen an das Messsystem genau abschätzen zu
+können (Genauigkeit, Störungen, Zuverlässigkeit, etc.).
 \section*{Unser Projekt}
 \subsection*{Überblick}
 - Anforderungsanalyse
