add table of contents

--- a/documentation/thesis/main.tex
+++ b/documentation/thesis/main.tex
@@ -13,6 +13,7 @@
 \author{Wenwen Chen, Rainer Schönberger}
 \begin{document}
 \maketitle
+\tableofcontents
 \input{Introduce}
 \input{Concept}
 \input{Implementation}
