--- a/report/main.tex
+++ b/report/main.tex
@@ -16,7 +16,48 @@ experiment setup}
 \maketitle
 \tableofcontents
 \input{Concept}
+\section{Features}
+\section{Sensors}
+\section{Logical design}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/plan2.pdf}
+	\caption{Network topology}
+	\label{fig:topo}
+\end{figure}
+\section{Protocols}
+\subsection{ZAC}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.3\textwidth]{img/zac_bits.pdf}
+	\caption{ZAC protocol signal interpretation}
+	\label{fig:zac}
+\end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/zac_example.pdf}
+	\caption{ZAC protocol example}
+	\label{fig:zacexample}
+\end{figure}
+\subsection{I2C}
+\subsection{RS485}
 \input{Implementation}
+\section{Collector board}
+\subsection{Hardware}
+\subsection{Software}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\textwidth]{img/zac_timing.pdf}
+	\caption{ZAC protocol worst case timing}
+	\label{fig:zactiming}
+\end{figure}
+\section{Ethernet board}
+\subsection{Hardware}
+\subsection{Software}
+\section{Temperature board}
+\section{Humidity board}
+\subsection{Hardware}
+\subsection{Software}
 \input{Usage}
 \input{Conclusion}
 \end{document}
