--- a/report/main.tex
+++ b/report/main.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{eurosym}
+\usepackage{cite}
 % the following commands control the margins:
 %\topmargin=-1in    % Make letterhead start about 1 inch from top of page 
 %\textheight=8.5in    % text height can be bigger for a longer letter
@@ -21,12 +22,12 @@ experiment setup}
 \section{Sensors}
 \subsection{TSIC 506F}
 For temperature measurements, we use the TSIC 506F temperature sensor
-integrated circuit. At a relatively low proce of about \EUR{7} per device, it
+integrated circuit. At a relatively low price of about \EUR{7} per device, it
 is able to deliver very high accuracy (see table \ref{tab:tsic}).\\
 The temperature is converted to a digital value, which is sent out over a
-proprietary one wire protocol variant, called \emph{ZAC} (details see section \ref{chap:zac}).
-
-\begin{table}[H!]
+proprietary one wire protocol variant, called \emph{ZAC-Wire} (details see section \ref{chap:zac}).\\
+In order to minimize soldering heat, which would influence the calibration, we used the TO92 packaged sensor.
+\begin{table}[Hh!]
 	\centering
 	\begin{tabular}{| r | c |}
 		\hline
@@ -102,4 +103,11 @@ proprietary one wire protocol variant, called \emph{ZAC} (details see section \r
 \subsection{User interface}
 \input{Usage}
 \input{Conclusion}
+\chapter{References}
+%\renewcommand\refname{\vskip -1cm}
+%\bibliographystyle{abbrv}
+\bibliographystyle{plain}
+\bibliography{bib}
+\nocite{*}
+
 \end{document}
