--- a/report/main.tex
+++ b/report/main.tex
@@ -115,18 +115,25 @@ Every time:
 \end{itemize}
 On a falling edge:
 \begin{itemize}
-	\item If $\left|T_{low} - T_{timer}\right| < T_{thresh}$ with a constant $T_{thresh} << T_{crit}$, we have observed a start bit.\\
-		We now update the critical sampling time\footnote{$T_{crit} = 0.5\cdot(T_{timer} + T_{low})$ would be more accurate, but would consume more time to calculate.}: $T_{crit} = T_{timer}$.
-
+	\item If $\left|T_{low} - T_{timer}\right| < T_{thresh}$ with a constant $T_{thresh} << T_{crit}$, we
+		have observed a start bit.\\
+		We now update the critical sampling time\footnote{$T_{crit} = 0.5\cdot(T_{timer} + T_{low})$ would
+		be more accurate, but would consume more time to calculate.}: $T_{crit} = T_{timer}$.
 \end{itemize}
 On a rising edge:
 \begin{itemize}
-	\item The current timer value is stored as $T_{low}$. If we already observed a falling edge, this represents the time, the signal was low.
-	\item If we already have seen a start bit, we now sample a data bit\footnote{Note, that a repeated start bit would also be sampled as a data bit with an unpredictable value.}:\\
+	\item The current timer value is stored as $T_{low}$. If we already observed a falling edge, this
+		represents the time, the signal was low.
+	\item If we already have seen a start bit, we now sample a data bit\footnote{Note, that a repeated
+		start bit would also be sampled as a data bit with an unpredictable value.}:\\
 	$\mathrm{bit} = \begin{cases} 1 & \text{if } T_{timer}<T_{crit} \\ 0 & \text{else}\end{cases}$
 \end{itemize}
-\paragraph{Timer overflow Interrupt:} The timer is configured in a way, that an overflow will occur after the timer is running without a reset for $T_{ovf}$, with $T_{bit} < T_{ovf} < 100\,\mathrm{ms}$. Hence the interrupt will occur, after a completed transmission and before the start of the next transmission.\\
-After a overflow occurs, we check, if we received a whole transmission. If this is the case, we disable interrupts and stop the current measurement. Otherwise we reset the receive buffer and wait for the next transmission to begin.
+\paragraph{Timer overflow Interrupt:} The timer is configured in a way, that an overflow will occur after
+the timer is running without a reset for $T_{ovf}$, with $T_{bit} < T_{ovf} < 100\,\mathrm{ms}$. Hence
+the interrupt will occur, after a completed transmission and before the start of the next transmission.\\
+After a overflow occurs, we check, if we received a whole transmission. If this is the case, we disable
+interrupts and stop the current measurement. Otherwise we reset the receive buffer and wait for the
+next transmission to begin.
 \paragraph{Starting a measurement:} To start the meassuring process, the following is executed:
 \begin{itemize}
 	\item $T_{crit}$ is set to the maximum value.
@@ -146,12 +153,14 @@ As we have up to 8 sensors connected to the Atmega88, we have to do one measurem
 after another. as one sample of a measurement takes $>100\,\mathrm{ms}$ we would run
 into problems reaching the desired sampling rate of $>1\,\mathrm{Hz}$.
 Our approach is to sample two sensors at the
-same time, using a second 8 bit timer. Our interrupt handler for the ZAC protocol decoding are not interruptable. Hence, incomming interrupts are delayed for the runtime $t_e$ of currently executed interrupts.
+same time, using a second 8 bit timer. Our interrupt handler for the ZAC protocol decoding are not interruptable.
+Hence, incomming interrupts are delayed for the runtime $t_e$ of currently executed interrupts.
 If we have interrupts active for two sensors at the same time, the controller might see a delayed signal.
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\textwidth]{img/zac_timing.pdf}
-	\caption{ZAC protocol worst case timing. The grey shaded areas illustrate the potentially delayed vision of a microcontroller due to interrupt latency.}
+	\caption{ZAC protocol worst case timing. The grey shaded areas illustrate the potentially delayed vision
+	of a microcontroller due to interrupt latency.}
 	\label{fig:zactiming}
 \end{figure}
 Figure \ref{fig:zactiming} illustrates this problem:\\
@@ -165,7 +174,8 @@ or
 $$T_{max} < \frac{3}{2}\cdot T_h\text{.}$$
 Both inequations simplify to
 $$t_e < \frac{1}{4}\cdot T_h\text{.}$$
-According to \cite{zac}, the nominal value for $T_h$ is $\frac{125}{2}\,\mu\mathrm{s}$. Hence our error due to interrupt latency has to be smaller than $15.625\,\mu\mathrm{s}$.\\
+According to \cite{zac}, the nominal value for $T_h$ is $\frac{125}{2}\,\mu\mathrm{s}$. Hence our error due to
+interrupt latency has to be smaller than $15.625\,\mu\mathrm{s}$.\\
 As the microcontroller runs at a clock speed of $20\,\mathrm{MHz}$, we have to complete previous interrupts,
 start the interrupt handler of the new interrupt and sample the current timer value within 332 clock cycles,
 to not harm the above limit on the error.\\
@@ -194,8 +204,12 @@ Communication with the collector board is done via I2C (Two Wire Interface). The
 I2C slave, extending the clock, if it is currently not able to process incomming data.
 This is especially used while a measurement is in progress: As soon as new data byte arrives,
 it is buffered and the clock will be extended, signalling to the master, that no further data should be sent or received.\\
-If a write request (SLA+W) is sent, the following data is interpreted as a command. A list of implemented commands is given in table \ref{tab:i2c}. The collector board reacts to the general call address 0. This makes it possible to trigger a measurement on multiple boards, using only one I2C transmission. Also the own I2C address can be set to a new value without knowing the old one.\\
-If a read request (SLA+R) is sent, the packet array from the last completed measurement will be sent out, starting with sensor 0. For details about the packet format see chapter \ref{chap:packet}. Not all packets have to be received, as soon as a STOP bit is received, the transmission is aborted. A new read request will again trigger the transmission of data starting at sensor 0.
+If a write request (SLA+W) is sent, the following data is interpreted as a command. A list of implemented commands is given
+in table \ref{tab:i2c}. The collector board reacts to the general call address 0. This makes it possible to trigger a measurement
+on multiple boards, using only one I2C transmission. Also the own I2C address can be set to a new value without knowing the old one.\\
+If a read request (SLA+R) is sent, the packet array from the last completed measurement will be sent out, starting with sensor 0.
+For details about the packet format see chapter \ref{chap:packet}. Not all packets have to be received, as soon as a STOP bit is
+received, the transmission is aborted. A new read request will again trigger the transmission of data starting at sensor 0.
 \begin{table}[Hh!]
 	\centering
 	\begin{tabularx}{\textwidth}{ | c | c | c | X | }
@@ -203,9 +217,11 @@ If a read request (SLA+R) is sent, the packet array from the last completed meas
     Name & Value & Parameters & Action\\
 		\hline
 		\hline
-    START\_MEASUREMENT & 0x01 & --- & All 8 sensor values will be captured as soon as the STOP bit is received. If during measurement the slave is addressed again, the I2C clock will immediately be extended until the measurement is complete, blocking the whole I2C bus.\\
+    START\_MEASUREMENT & 0x01 & --- & All 8 sensor values will be captured as soon as the STOP bit is received. If during measurement
+		the slave is addressed again, the I2C clock will immediately be extended until the measurement is complete, blocking the whole I2C bus.\\
 		\hline
-    SET\_ADDRESS & 0x02 & address & The own I2C address will be updated with the 1 byte value following the command. The address should be in the range from 8 to 112. The default address is 42\\
+    SET\_ADDRESS & 0x02 & address & The own I2C address will be updated with the 1 byte value following the command. The address should
+		be in the range from 8 to 112. The default address is 42\\
 		\hline
     LED\_ON & 0x03 & number & The LED with the given number will be turned on.\\
 		\hline
@@ -216,16 +232,23 @@ If a read request (SLA+R) is sent, the packet array from the last completed meas
 	\label{tab:i2c}
 \end{table}
 \subsection{Measurement packet format}\label{chap:packet}
-After data was received via the ZAC-Wire protocol, it is interpreted and converted to a convenient packet format, suitable for redirection via I2C. Each packet's integrity is protected by a CRC checksum and consists of the following fields:\\
+After data was received via the ZAC-Wire protocol, it is interpreted and converted to a convenient packet format, suitable for
+redirection via I2C. Each packet's integrity is protected by a CRC checksum and consists of the following fields:\\
 \begin{description}
-	\item[\textbf{type}] This field pecifies the type of the sensor, which supplied the data. Currently implemented values are 0 for TSIC and 1 for HYT. In case the type field reads 0, the \emph{Humidity} field will have no relevant value hence represents a padding field.
-	\item[c] This bit is set to 1, if the measurement was completed without a timeout. This is usually the case, when a sensor is connected. Hence this bit can be used to determine, whether a sensor is connected or not.
-	\item[error] This field reads 1, when an error during sampling has occured. Possible causes are: HYT Checksum missmatch, TSIC Parity missmatch or TSIC Protocol format error.
+	\item[\textbf{type}] This field pecifies the type of the sensor, which supplied the data. Currently implemented values are 0
+		for TSIC and 1 for HYT. In case the type field reads 0, the \emph{Humidity} field will have no relevant value hence
+		represents a padding field.
+	\item[c] This bit is set to 1, if the measurement was completed without a timeout. This is usually the case, when a
+		sensor is connected. Hence this bit can be used to determine, whether a sensor is connected or not.
+	\item[error] This field reads 1, when an error during sampling has occured. Possible causes are: HYT Checksum missmatch,
+		TSIC Parity missmatch or TSIC Protocol format error.
 	\item[Temperature] $T_m \cdot 100$ with $T_m$ the measured temperature in Celsius.
 	\item[Humidity] $RH_m \cdot 100$ with $RH_m$ the measured relative humidity in \%.
-	\item[CRC-8] Checksum over the first 5 bytes of the packet\footnote{The Humidity field is always part of the checksum calculation, even if the packet type is 0.}.
+	\item[CRC-8] Checksum over the first 5 bytes of the packet\footnote{The Humidity field is always part of the checksum
+		calculation, even if the packet type is 0.}.
 \end{description}
-Figure \ref{fig:packet} shows the structure of a packet. Packets can be received via I2C in the order, shown in figure \ref{fig:packetorder}.\\
+Figure \ref{fig:packet} shows the structure of a packet. Packets can be received via I2C in the order, shown in
+figure \ref{fig:packetorder}.\\
 
 \begin{figure}
 	\centering
